Added support for fractional pricing