@@ -7,6 +7,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
+import java.math.BigDecimal;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -36,9 +37,9 @@ public class CartControllerTest {
     @Test
     void generateReceiptReturnsCorrectDetails() {
         Receipt receipt = new Receipt(
-                List.of(new ReceiptItem("Apple", 2, 45),
-                        new ReceiptItem("Banana", 1, 50)),
-                95
+                List.of(new ReceiptItem("Apple", 2, BigDecimal.valueOf(45.00)),
+                        new ReceiptItem("Banana", 1, BigDecimal.valueOf(50.00))),
+                BigDecimal.valueOf(95.00)
         );
 
         when(cartService.getReceipt()).thenReturn(receipt);
@@ -46,29 +47,29 @@ public class CartControllerTest {
         Receipt generatedReceipt = cartController.getReceipt();
 
         assertThat(generatedReceipt.items()).hasSize(2);
-        assertThat(generatedReceipt.total()).isEqualTo(95);
+        assertThat(generatedReceipt.total()).isEqualByComparingTo(BigDecimal.valueOf(95.00));
 
-        ReceiptItem appleItem = generatedReceipt.items().get(0);
+        ReceiptItem appleItem = generatedReceipt.items().getFirst();
         assertThat(appleItem.productName()).isEqualTo("Apple");
         assertThat(appleItem.quantity()).isEqualTo(2);
-        assertThat(appleItem.price()).isEqualTo(45);
+        assertThat(appleItem.price()).isEqualByComparingTo(BigDecimal.valueOf(45.00));
 
         ReceiptItem bananaItem = generatedReceipt.items().get(1);
         assertThat(bananaItem.productName()).isEqualTo("Banana");
         assertThat(bananaItem.quantity()).isEqualTo(1);
-        assertThat(bananaItem.price()).isEqualTo(50);
+        assertThat(bananaItem.price()).isEqualByComparingTo(BigDecimal.valueOf(50.00));
     }
 
     @Test
     void generateReceiptHandlesEmptyCart() {
-        Receipt receipt = new Receipt(List.of(), 0);
+        Receipt receipt = new Receipt(List.of(), BigDecimal.ZERO);
 
         when(cartService.getReceipt()).thenReturn(receipt);
 
         Receipt generatedReceipt = cartController.getReceipt();
 
         assertThat(generatedReceipt.items()).isEmpty();
-        assertThat(generatedReceipt.total()).isZero();
+        assertThat(generatedReceipt.total()).isEqualByComparingTo(BigDecimal.ZERO);
     }
 
     @Test
