@@ -13,6 +13,7 @@ import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
+import java.math.BigDecimal;
 import java.util.List;
 import java.util.Optional;
 
@@ -38,12 +39,12 @@ class CartServiceTest {
 
     @Test
     void scanItemAddsProductToCart() {
-        ProductModel productModel = new ProductModel("Apple", 30, List.of(new OfferModel(1L, 2, 45)));
+        ProductModel productModel = new ProductModel("Apple", BigDecimal.valueOf(30.00), List.of(new OfferModel(1L, 2, BigDecimal.valueOf(45.00))));
         when(productRepository.findById("Apple")).thenReturn(Optional.of(productModel));
 
         cartService.scanItem("Apple");
 
-        verify(cart, times(1)).scanItem(new Product("Apple", 30, List.of(new Offer(2, 45))));
+        verify(cart, times(1)).scanItem(new Product("Apple", BigDecimal.valueOf(30.00), List.of(new Offer(2, BigDecimal.valueOf(45.00)))));
     }
 
     @Test
@@ -60,9 +61,9 @@ class CartServiceTest {
     @Test
     void generateReceiptReturnsCorrectDetails() {
         Receipt receipt = new Receipt(
-                List.of(new ReceiptItem("Apple", 2, 45),
-                        new ReceiptItem("Banana", 1, 50)),
-                95
+                List.of(new ReceiptItem("Apple", 2, BigDecimal.valueOf(45.00)),
+                        new ReceiptItem("Banana", 1, BigDecimal.valueOf(50.00))),
+                BigDecimal.valueOf(95.00)
         );
 
         when(cart.generateReceipt()).thenReturn(receipt);
@@ -70,29 +71,29 @@ class CartServiceTest {
         Receipt generatedReceipt = cartService.getReceipt();
 
         assertThat(generatedReceipt.items()).hasSize(2);
-        assertThat(generatedReceipt.total()).isEqualTo(95);
+        assertThat(generatedReceipt.total()).isEqualByComparingTo(BigDecimal.valueOf(95.00));
 
-        ReceiptItem appleItem = generatedReceipt.items().get(0);
+        ReceiptItem appleItem = generatedReceipt.items().getFirst();
         assertThat(appleItem.productName()).isEqualTo("Apple");
         assertThat(appleItem.quantity()).isEqualTo(2);
-        assertThat(appleItem.price()).isEqualTo(45);
+        assertThat(appleItem.price()).isEqualByComparingTo(BigDecimal.valueOf(45.00));
 
         ReceiptItem bananaItem = generatedReceipt.items().get(1);
         assertThat(bananaItem.productName()).isEqualTo("Banana");
         assertThat(bananaItem.quantity()).isEqualTo(1);
-        assertThat(bananaItem.price()).isEqualTo(50);
+        assertThat(bananaItem.price()).isEqualByComparingTo(BigDecimal.valueOf(50.00));
     }
 
     @Test
     void generateReceiptHandlesEmptyCart() {
-        Receipt receipt = new Receipt(List.of(), 0);
+        Receipt receipt = new Receipt(List.of(), BigDecimal.ZERO);
 
         when(cart.generateReceipt()).thenReturn(receipt);
 
         Receipt generatedReceipt = cartService.getReceipt();
 
         assertThat(generatedReceipt.items()).isEmpty();
-        assertThat(generatedReceipt.total()).isZero();
+        assertThat(generatedReceipt.total()).isEqualByComparingTo(BigDecimal.ZERO);
     }
 
     @Test
