@@ -2,10 +2,11 @@ package com.andrei.supermarket.domain;
 
 import org.junit.jupiter.api.Test;
 
+import java.math.BigDecimal;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 public class CartTest {
     @Test
@@ -14,72 +15,72 @@ public class CartTest {
         Receipt receipt = cart.generateReceipt();
 
         assertThat(receipt.items()).isEmpty();
-        assertThat(receipt.total()).isZero();
+        assertThat(receipt.total()).isEqualByComparingTo(BigDecimal.ZERO);
     }
 
     @Test
     void cartWithOneItemGeneratesCorrectReceipt() {
         Cart cart = new Cart();
-        Product apple = new Product("Apple", 30, List.of(new Offer(2, 45)));
+        Product apple = new Product("Apple", BigDecimal.valueOf(30.00), List.of(new Offer(2, BigDecimal.valueOf(45.00))));
         cart.scanItem(apple);
 
         Receipt receipt = cart.generateReceipt();
 
         assertThat(receipt.items()).hasSize(1);
-        assertThat(receipt.items().get(0).productName()).isEqualTo("Apple");
-        assertThat(receipt.items().get(0).quantity()).isEqualTo(1);
-        assertThat(receipt.items().get(0).price()).isEqualTo(30);
-        assertThat(receipt.total()).isEqualTo(30);
+        assertThat(receipt.items().getFirst().productName()).isEqualTo("Apple");
+        assertThat(receipt.items().getFirst().quantity()).isEqualTo(1);
+        assertThat(receipt.items().getFirst().price()).isEqualByComparingTo(BigDecimal.valueOf(30.00));
+        assertThat(receipt.total()).isEqualByComparingTo(BigDecimal.valueOf(30.00));
     }
 
     @Test
     void cartWithMultipleItemsGeneratesCorrectReceipt() {
         Cart cart = new Cart();
-        cart.scanItem(new Product("Apple", 30, List.of(new Offer(2, 45))));
-        cart.scanItem(new Product("Banana", 50, List.of(new Offer(3, 130))));
+        cart.scanItem(new Product("Apple", BigDecimal.valueOf(30.00), List.of(new Offer(2, BigDecimal.valueOf(45.00)))));
+        cart.scanItem(new Product("Banana", BigDecimal.valueOf(50.00), List.of(new Offer(3, BigDecimal.valueOf(130.00)))));
 
         Receipt receipt = cart.generateReceipt();
 
         assertThat(receipt.items()).hasSize(2);
-        assertThat(receipt.total()).isEqualTo(80);
+        assertThat(receipt.total()).isEqualByComparingTo(BigDecimal.valueOf(80.00));
     }
 
     @Test
     void cartAppliesDiscountForOfferItemsInReceipt() {
         Cart cart = new Cart();
-        Product apple = new Product("Apple", 30, List.of(new Offer(2, 45)));
+        Product apple = new Product("Apple", BigDecimal.valueOf(30.00), List.of(new Offer(2, BigDecimal.valueOf(45.00))));
         cart.scanItem(apple);
         cart.scanItem(apple);
 
         Receipt receipt = cart.generateReceipt();
 
         assertThat(receipt.items()).hasSize(1);
-        assertThat(receipt.items().get(0).productName()).isEqualTo("Apple");
-        assertThat(receipt.items().get(0).quantity()).isEqualTo(2);
-        assertThat(receipt.items().get(0).price()).isEqualTo(45);
-        assertThat(receipt.total()).isEqualTo(45);
+        assertThat(receipt.items().getFirst().productName()).isEqualTo("Apple");
+        assertThat(receipt.items().getFirst().quantity()).isEqualTo(2);
+        assertThat(receipt.items().getFirst().price()).isEqualByComparingTo(BigDecimal.valueOf(45.00));
+        assertThat(receipt.total()).isEqualByComparingTo(BigDecimal.valueOf(45.00));
     }
 
     @Test
     void cartAppliesDiscountAndNonOfferItemsInReceipt() {
         Cart cart = new Cart();
-        Product apple = new Product("Apple", 30, List.of(new Offer(2, 45)));
+        Product apple = new Product("Apple", BigDecimal.valueOf(30.00), List.of(new Offer(2, BigDecimal.valueOf(45.00))));
         cart.scanItem(apple);
         cart.scanItem(apple);
-        cart.scanItem(new Product("No offer", 10, null));
+        cart.scanItem(new Product("No offer", BigDecimal.valueOf(10.00), null));
 
         Receipt receipt = cart.generateReceipt();
 
         assertThat(receipt.items()).hasSize(2);
-        assertThat(receipt.total()).isEqualTo(55);
+        assertThat(receipt.total()).isEqualByComparingTo(BigDecimal.valueOf(55.00));
     }
 
     @Test
     void cartSelectsBestOfferForProduct() {
         Cart cart = new Cart();
-        Product apple = new Product("Apple", 30, List.of(
-                new Offer(2, 45),
-                new Offer(5, 100)
+        Product apple = new Product("Apple", BigDecimal.valueOf(30.00), List.of(
+                new Offer(2, BigDecimal.valueOf(45.00)),
+                new Offer(5, BigDecimal.valueOf(100.00))
         ));
         cart.scanItem(apple);
         cart.scanItem(apple);
@@ -90,24 +91,24 @@ public class CartTest {
         Receipt receipt = cart.generateReceipt();
 
         assertThat(receipt.items()).hasSize(1);
-        ReceiptItem appleItem = receipt.items().get(0);
+        ReceiptItem appleItem = receipt.items().getFirst();
         assertThat(appleItem.productName()).isEqualTo("Apple");
         assertThat(appleItem.quantity()).isEqualTo(5);
-        assertThat(appleItem.price()).isEqualTo(100);
+        assertThat(appleItem.price()).isEqualByComparingTo(BigDecimal.valueOf(100.00));
     }
 
     @Test
     void cartEmptyCartWithItemsGeneratesEmptyReceipt() {
         Cart cart = new Cart();
-        Product apple = new Product("Apple", 30, List.of(
-                new Offer(2, 45)
+        Product apple = new Product("Apple", BigDecimal.valueOf(30.00), List.of(
+                new Offer(2, BigDecimal.valueOf(45.00))
         ));
         cart.scanItem(apple);
         cart.emptyCart();
         Receipt receipt = cart.generateReceipt();
 
         assertThat(receipt.items()).isEmpty();
-        assertThat(receipt.total()).isZero();
+        assertThat(receipt.total()).isEqualByComparingTo(BigDecimal.ZERO);
     }
 
     @Test
@@ -116,5 +117,26 @@ public class CartTest {
         assertThatThrownBy(() -> cart.scanItem(null))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessage("Product cannot be null");
+    }
+
+    @Test
+    void cartHandlesFractionalPricesCorrectly() {
+        Cart cart = new Cart();
+        Product orange = new Product("Orange", BigDecimal.valueOf(1.25), List.of(
+                new Offer(3, BigDecimal.valueOf(3.00))
+        ));
+
+        cart.scanItem(orange);
+        cart.scanItem(orange);
+        cart.scanItem(orange);
+        cart.scanItem(orange);
+
+        Receipt receipt = cart.generateReceipt();
+
+        assertThat(receipt.items()).hasSize(1);
+        ReceiptItem orangeItem = receipt.items().getFirst();
+        assertThat(orangeItem.productName()).isEqualTo("Orange");
+        assertThat(orangeItem.quantity()).isEqualTo(4);
+        assertThat(orangeItem.price()).isEqualByComparingTo(BigDecimal.valueOf(4.25));
     }
 }
